--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-05-19  Christophe Merlet  <christophe@merlet.net>
+
+	* fr.po: Updated French translation.
+
 2002-05-19  Vlad Harchev  <hvv@hippo.ru>
 
 	* ru.po: updated russian translation from Dmitry G. Mastrukov
