Sander Vesik <sander.vesik@sun.com
	 * stylesheets/yelp-custom.xsl, stylesheets/yelp-customization.xsl:
	   introduce a new parameter and use it so images distributed
	   with the stylesheet get picked up correctly

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-05-20  Sander Vesik <sander.vesik@sun.com
+
+	* stylesheets/yelp-custom.xsl, stylesheets/yelp-customization.xsl:
+	  introduce a new parameter and use it so images distributed
+	  with the stylesheet get picked up correctly
+
 2002-05-18  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-info.c (yelp_info_init): 
