--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2002-05-20  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/yelp-reader.c: be ASYNC! :) and handle cancels. Starting to
+	  be nice now.
+
+	* src/yelp-marshal.list: VOID:INT,STRING -> VOID:STRING,INT
+
+	* src/yelp-reader.c (yelp_reader_start): renamed from reader_read.
+
 2002-05-20  Sander Vesik <sander.vesik@sun.com
 
 	* stylesheets/yelp-custom.xsl, stylesheets/yelp-customization.xsl:
