fixed so that external links are working too.
2002-05-21  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-uri.c: fixed so that external links are working too.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2002-05-21  Mikael Hallendal  <micke@codefactory.se>
 
+	* src/yelp-uri.c: fixed so that external links are working too.
+
 	* src/yelp-view-toc.c: implemented jimmac's mockups.
 
 	* src/yelp-uri.c: added support for file:
