--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2002-05-21  Mikael Hallendal  <micke@codefactory.se>
 
+	* NEWS: updated for 0.8
+
 	* configure.in: bumped version to 0.8
 
 	* src/yelp-reader.c: fixed compile warning.
