--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+Changes in 0.8:
+---------------
+
+* Async reading of all documents                (Mikael Hallendal)
+* New nice look from Jimmacs mockups            (Mikael Hallendal,
+                                                 Jakub Steiner)
+* Added support for gtkhtml1                    (Mikael Hallendal)
+* Plugged lots of mem leaks                     (Mikael Hallendal)
+* Fixed the nasty bug that made it crash on     (Mikael Hallendal,
+  Debian unstable.                               Stéphane Démurget)
+* Various bugfixes                              (Mikael Hallendal)
+* Stylesheets improvments                       (Sander Vesik)
+
 Changes in 0.7:
 ---------------
 
