--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2002-05-21  Changwoo Ryu  <cwryu@debian.org>
+
+	* ko.po: Updated Korean translation by Young-Ho Cha
+	<ganadist@chollian.net>.
+
 2002-05-19  Christophe Merlet  <christophe@merlet.net>
 
 	* fr.po: Updated French translation.
