--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2002-05-21  Mikael Hallendal  <micke@codefactory.se>
 
+	* src/yelp-reader.c:
+	(reader_db_write): don't return -1
+	(reader_db_close): same.
+
+	* Release 0.8
+
 	* NEWS: updated for 0.8
 
 	* configure.in: bumped version to 0.8
