--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-05-22  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/test-reader.c:
+	(main): call yelp_reader_new with TRUE for async.
+	(data_cb): swapped buffer and len arguments.
+
 2002-05-21  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-reader.c:
