added a space, thanks rhult.
2002-05-22  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-toc.c (toc_page_end): added a space, thanks rhult.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2002-05-22  Mikael Hallendal  <micke@codefactory.se>
 
+	* src/yelp-view-toc.c (toc_page_end): added a space, thanks rhult.
+
 	* src/yelp-window.c (window_about_cb): 
 	- fixed copyright notice in about dialog. Thanks menthos.
 
