--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2002-05-22  Richard Hult  <rhult@codefactory.se>
+
+	* src/yelp-view-toc.c:
+	(toc_man_emit): free return from yelp_uri_to_string.
+
+	* src/yelp-util.c (yelp_util_compose_path_url): free path
+
+	* src/yelp-man.c (yelp_man_init): free manpathes
+
 2002-05-22  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-db2html.c: 
