--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-05-22  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/yelp-view-toc.c (toc_page_end): updated footer some.
+
 2002-05-22  Richard Hult  <rhult@codefactory.se>
 
 	* src/yelp-view-toc.c:
