--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-05-23  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/yelp-html-gtkhtml1.c (html_link_clicked_cb): 
+	- don't shortcut info
+
 2002-05-22  Sander Vesik <sander.vesik@sun.com>
 
 	* stylesheets/yelp/customization.xsl:
