--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2002-05-23  Mikael Hallendal  <micke@codefactory.se>
 
+	* src/yelp-view-content.c:
+	(yelp_view_content_new): shrink TOC-tree width
+
 	* src/yelp-html-gtkhtml1.c (html_link_clicked_cb): 
 	- don't shortcut info
 
