Added italian translation.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-05-26  Alessio Frusciante  <algol@firenze.linux.it>
+
+	* configure.in: added "it" to ALL_LINGUAS
+
 2002-05-23  Jacob Berkman  <jacob@ximian.com>
 
 	* src/Makefile.am (yelp-marshal-main.c): add explicit dependency
