- Don't include section name in end comment. - put [] around the section
2002-05-26  Mikael Hallendal  <micke@codefactory.se>

	* stylesheets/yelp-customization.xsl:
	- Don't include section name in end comment.
	- put [] around the section name in start tag.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-05-26  Mikael Hallendal  <micke@codefactory.se>
+
+	* stylesheets/yelp-customization.xsl: 
+	- Don't include section name in end comment.
+	- put [] around the section name in start tag.
+	
 2002-05-26  Alessio Frusciante  <algol@firenze.linux.it>
 
 	* configure.in: added "it" to ALL_LINGUAS
