- removed old code. - fixed a couple of warnings
2002-05-27  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-reader.c:
	- removed old code.
	- fixed a couple of warnings

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2002-05-27  Mikael Hallendal  <micke@codefactory.se>
 
+	* src/yelp-reader.c: 
+	- removed old code.
+	- fixed a couple of warnings
+
 	* stylesheets/yelp-customization.xsl: don't include section names
 	  on toc and title-page.
 
