--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2002-05-27  Mikael Hallendal  <micke@codefactory.se>
 
+	* NEWS: updated for 0.9
+
+	* configure.in: 
+	- Bumped version to 0.9
+	- Updated libgnome deps to 1.117.2
+	- Updated gtkhtml2 deps to 1.99.8
+
 	* src/yelp-reader.c: 
 	- removed old code.
 	- fixed a couple of warnings
