--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+Changes in 0.9:
+---------------
+
+* Caching docbook in memory for faster access   (Mikael Hallendal)
+* Fixed bug that caused crashes on Solaris      (Mikael Hallendal)
+* View info pages in chunks                     (Patanjali Somayaji)
+* Fixed mem leaks                               (Mikael Hallendal,
+						 Richard Hult)
+* Stylesheet updates                            (Sander Vesik)
+
 Changes in 0.8:
 ---------------
 
