--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
-2002-05-27  Mikael Hallendal  <micke@codefactory.se>
+2002-05-27  Mikael Hallendal  <micke@codefactory.se> 
+
+	* Release 0.9
+
+	* src/Makefile.am: build fix for marshallers.
 
 	* NEWS: updated for 0.9
 
