--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-05-27  Hasbullah Bin Pit <sebol@ikhlas.com>
+
+	* ms.po: Updated Malay Translation.
+
 2002-05-26  Alessio Frusciante  <algol@firenze.linux.it>
 
 	* it.po: Added italian translation.
