--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-05-30  Vincent van Adrighem <V.vanAdrighem@dirck.mine.nu>
+
+	* nl.po: Minor update to Dutch translation by Tino Meinen.
+
 2002-05-27  Hasbullah Bin Pit <sebol@ikhlas.com>
 
 	* ms.po: Updated Malay Translation.
