--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2002-05-31  Ole Laursen  <olau@hardworking.dk>
+
+	* da.po: Changed a few strings which, based on empirically
+	collected evidence, were not optimal.
+
 2002-05-30  Vincent van Adrighem <V.vanAdrighem@dirck.mine.nu>
 
 	* nl.po: Minor update to Dutch translation by Tino Meinen.
