--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2002-05-31  Mikael Hallendal  <micke@codefactory.se>
 
+	* Release 0.9.1
+
+	* configure.in: bumped version to 0.9.1
+
+	* NEWS: updated for 0.9.1
+
 	* stylesheets/docbook/*: 
 	- Added the 1.48 stylesheets until the stylesheet issues have been 
 	  sorted out. Norm has said that in the 1.50+ the changes between
