--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Changes in 0.9.1:
+-----------------
+
+* Shipping the 1.48 stylesheets with Yelp       (Mikael Hallendal)
+
 Changes in 0.9:
 ---------------
 
