fixes save session bug, #82605
2002-05-31  Yogeesh MB <yogeeshappa.mathighatta@wipro.com>

	* src/yelp-main.c: fixes save session bug, #82605

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-05-31  Yogeesh MB <yogeeshappa.mathighatta@wipro.com> 
+
+	* src/yelp-main.c: fixes save session bug, #82605 
+
 2002-05-31  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-reader.c (reader_get_chunk):
