--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-05-31  Mikael Hallendal  <micke@codefactory.se>
+
+	* configure.in (yelp): define yelplocaledir, Fixes #83639
+
+	* src/Makefile.am (INCLUDES): use yelplocaledir
+
 2002-05-31  Ross Burton  <ross@burtonini.com>
 
 	* src/yelp-window.c (window_about_cb): Tell the about dialog who
