adding a no accelerator PO

--- a/po/ar.po
+++ b/po/ar.po
@@ -6,14 +6,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"POT-Creation-Date: 2002-05-26 17:58-0500\n"
-"PO-Revision-Date: 2002-05-21 09:49+0300\n"
-"Last-Translator: Sayed Jaffer Al-Mosawi <mosawi@arabeyes.org>\n"
-"Language-Team: Arabic <contact@arabeyes.org>\n"
+"POT-Creation-Date: 2002-05-24 17:01-0500\n"
+"PO-Revision-Date: 2002-05-31 19:28-0300\n"
+"Last-Translator: Isam Bayazidi <bayazidi@arabeyes.org>\n"
+"Language-Team: Arabic <support@arabeyes.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.0beta1\n"
+"X-Generator: KBabel 0.9.6\n"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -27,8 +27,7 @@ msgstr "مصنع يلب"
 msgid ""
 "Error while parsing the stylesheet, make sure you have your docbook "
 "environment setup correctly."
-msgstr ""
-"حدث خطأ أثناء إعراب صفحة النمط، تأكد من كونك نصبت بيئة docbook بشكل صحيح."
+msgstr "حدث خطأ أثناء إعراب صفحة النمط، تأكد من كونك نصبت بيئة docbook بشكل صحيح."
 
 #: src/yelp-db2html.c:101
 #, c-format
@@ -164,44 +163,44 @@ msgstr "صفحات الدليل"
 
 #: src/yelp-window.c:152
 msgid "/_File"
-msgstr "/م_لف"
+msgstr "/ملف"
 
 #: src/yelp-window.c:153
 msgid "/File/_New window"
-msgstr "/ملف/نافذة جد_يدة"
+msgstr "/ملف/نافذة جديدة"
 
 #: src/yelp-window.c:154
 msgid "/File/_Close window"
-msgstr "/ملف/_اغلق النافذة"
+msgstr "/ملف/اغلق النافذة"
 
 #. {N_("/File/_Quit"),         NULL,         window_exit_cb,         0,                           "<StockItem>", GTK_STOCK_QUIT    },
 #: src/yelp-window.c:156
 msgid "/_Go"
-msgstr "/ان_طلق"
+msgstr "/انطلق"
 
 #: src/yelp-window.c:157
 msgid "/Go/_Back"
-msgstr "/انطلق/_خلف"
+msgstr "/انطلق/خلف"
 
 #: src/yelp-window.c:158
 msgid "/Go/_Forward"
-msgstr "/انطلق/تق_ديم"
+msgstr "/انطلق/تقديم"
 
 #: src/yelp-window.c:159
 msgid "/Go/_Home"
-msgstr "/انطلق/_منزل"
+msgstr "/انطلق/منزل"
 
 #: src/yelp-window.c:160
 msgid "/Go/_Index"
-msgstr "/انطلق/_فهرس"
+msgstr "/انطلق/فهرس"
 
 #: src/yelp-window.c:161
 msgid "/_Help"
-msgstr "/_مساعدة"
+msgstr "/مساعدة"
 
 #: src/yelp-window.c:162
 msgid "/Help/_About"
-msgstr "/مساعدة/ع_ن"
+msgstr "/مساعدة/عن"
 
 #: src/yelp-window.c:224
 msgid "Help Browser"
@@ -211,7 +210,7 @@ msgstr "متصفح المساعدة"
 #. * will shop up in the "about" box
 #: src/yelp-window.c:567
 msgid "translator_credits"
-msgstr "ائتمانات ال_مترجمين"
+msgstr "تكريم للمترجمين"
 
 #: src/yelp-window.c:571
 msgid "Help Browser for GNOME 2.0"
@@ -265,3 +264,4 @@ msgstr "مساعدة"
 
 #~ msgid "man"
 #~ msgstr "man"
+
