Added Galician translation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-01  Jesus Bravo Alvarez  <jba@pobox.com>
+
+	* configure.in: Added "gl" (Galician) to ALL_LINGUAS
+
 2002-05-29  Radek Doulik  <rodo@ximian.com>
 
 	* src/yelp-html-gtkhtml1.c: removed #include "yelp-db2html.h"
