--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-01  Jesus Bravo Alvarez  <jba@pobox.com>
+
+	* gl.po: Added Galician translation.
+
 2002-05-31  Ole Laursen  <olau@hardworking.dk>
 
 	* da.po: Changed a few strings which, based on empirically
