--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-01  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/yelp-reader.c (reader_file_start): Fixed #83668
+
 2002-06-01  James Henstridge  <james@daa.com.au>
 
 	* src/yelp-db2html.c (main): perform XInclude processing on
