don't load the DTD from the net.
2002-06-01  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-db2html.c (main): don't load the DTD from the net.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2002-06-01  Mikael Hallendal  <micke@codefactory.se>
 
+	* src/yelp-db2html.c (main): don't load the DTD from the net.
+
 	* src/yelp-reader.c (reader_file_start): Fixed #83668
 
 2002-06-01  James Henstridge  <james@daa.com.au>
