Updated Galician translation

--- a/po/gl.po
+++ b/po/gl.po
@@ -227,7 +227,9 @@ msgstr "Navegador de axuda"
 #. * will shop up in the "about" box
 #: src/yelp-window.c:563
 msgid "translator_credits"
-msgstr "Jesús Bravo Álvarez <suso@trasno.net>"
+msgstr ""
+"Jesús Bravo Álvarez <suso@trasno.net>\n"
+"Proxecto Trasno - http://www.trasno.net"
 
 #: src/yelp-window.c:567
 msgid "Help Browser for GNOME 2.0"
