--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-02  Germán Poo Caamaño <gpoo@ubiobio.cl>
+
+	* es.po: Updated Spanish translation from 
+	Juan Manuel García Molina <juanma_gm@wanadoo.es>
+
 2002-06-01  Carlos Perelló Marín <carlos@gnome-db.org>
 
 	* es.po: Updated by Juan Manuel García Molina <juanma_gm@wanadoo.es>
