--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-03  Mikael Hallendal  <micke@codefactory.se>
+
+	* docbook/catalog.in: updated
+
 2002-06-02  Mikael Hallendal  <micke@codefactory.se>
 
 	* docbook/Makefile.am (SUBDIRS): added dtd
