--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2002-06-03  Mikael Hallendal  <micke@codefactory.se>
 
+	* configure.in: bumped gtkhtml2 deps.
+
 	* src/yelp-window.c (window_handle_uri): 
 	- let the index view handle it's own uri's
 
